--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -2,10 +2,10 @@
     background-color: #ffc36d;
     width: 50px;
     height: 50px;
-    margin-left: 750px;
-    margin-top: 700px;
-    margin-bottom: 700px;
-    margin-right: 400px;
+    /*margin-left: 750px;*/
+    /*margin-top: 700px;*/
+    /*margin-bottom: 700px;*/
+    /*margin-right: 400px;*/
 }
 
 .scroll-box {
@@ -17,6 +17,9 @@
 }
 
 .content {
-    /*width: 600px;*/
-    /*height: 3000px;*/
+    width: 800px;
+    height: 3000px;
+    padding: 100px;
+    padding-top: 680px;
+    padding-left: 550px;
 }
