--- a/src/Tether.css
+++ b/src/Tether.css
@@ -1,10 +1,9 @@
 .TooltipBody {
-    position: fixed;
+    position: absolute;
+    /*position: fixed;*/
     top: 0;
     left: 0;
-    /*padding: 20px;*/
     background-color: #fff;
     box-shadow: 0px 1px 2px 1px #aaa;
     border-radius: 3px;
-    /*opacity: 0.7;*/
 }
