--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -10,10 +10,11 @@
 
 .scroll-box {
     width: 500px;
-    height: 600px;
+    height: 650px;
     overflow: auto;
     border: 1px solid;
     margin: 10px;
+    margin-top: 100px;
 }
 
 .content {
@@ -22,4 +23,5 @@
     padding: 100px;
     padding-top: 680px;
     padding-left: 550px;
+    padding-right: 600px;
 }
