--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .target {
     background-color: #ffc36d;
     width: 50px;
@@ -9,12 +13,12 @@
 }
 
 .scroll-box {
-    width: 500px;
-    height: 650px;
-    overflow: auto;
-    border: 1px solid;
-    margin: 10px;
-    margin-top: 100px;
+    /*width: 500px;*/
+    /*height: 650px;*/
+    /*overflow: auto;*/
+    /*border: 1px solid;*/
+    /*margin: 10px;*/
+    /*margin-top: 100px;*/
 }
 
 .content {
