--- a/demo/story.css
+++ b/demo/story.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .menuContainer {
     width: 100%;
 }
@@ -11,11 +15,14 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bold;
     color: #047fec;
+    background-color: #fff;
 }
 
 .pinned {
-    width: 100vw;
+    width: 100%;
     border-radius: 0;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.298039) 0px 2px 3px 0px;
 }
 
 .menuItem {
@@ -28,4 +35,30 @@
 
 .menuItem:last-child {
     border: none;
+}
+
+.record {
+    border: 1px solid #eee;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    padding-bottom: 20px;
+    margin: 0 auto;
+    width: 500px;
+}
+
+.record-header {
+    background: white;
+    margin: 0;
+    padding: 22px 0;
+}
+
+.record-header-container {
+    width: 500px;
+}
+
+.record-body {
+    line-height: 1.5;
+}
+
+.record-header-pinned {
+    border-bottom: 1px solid red;
 }
